XFG-000 logger: fix localpath

--- a/logger/values.yaml
+++ b/logger/values.yaml
@@ -166,7 +166,7 @@ global:
 
   persistence:
     enabled: true
-    localpath: /opt/xenoss/logger
+    localpath: ""
     storageClassName: ""
 
 common:
