--- a/account/values.yaml
+++ b/account/values.yaml
@@ -1,8 +1,12 @@
 global:
-  smtp:
-    host: <change me>
-    port: <change me>
-    tls: true
+  mail:
+    smtp:
+      host: <change me>
+      port: <change me>
+      tls: true
+    fromPersonal: <change me>
+    fromEmail: <change me>
+    confirmUrl: <change me>
   cookie_domain: <change me>
   selfRegistrationEnabled: false
   throttle_login_delay: 5s
@@ -120,11 +124,17 @@ common:
 
   envVars:
     - name: MAIL_HOST
-      value: "{{ .Values.global.smtp.host }}"
+      value: "{{ .Values.global.mail.smtp.host }}"
     - name: MAIL_PORT
-      value: "{{ .Values.global.smtp.port }}"
+      value: "{{ .Values.global.mail.smtp.port }}"
     - name: MAIL_TLS
-      value: "{{ .Values.global.smtp.tls }}"
+      value: "{{ .Values.global.mail.smtp.tls }}"
+    - name: MAIL_FROM_PERSONAL
+      value: "{{ .Values.global.mail.fromPersonal }}"
+    - name: MAIL_FROM_EMAIL
+      value: "{{ .Values.global.mail.fromEmail }}"
+    - name: ACCOUNT_CONFIRM_URL
+      value: "{{ .Values.global.mail.confirmUrl }}"
 
     - name: COOKIE_DOMAIN
       value: "{{ .Values.global.cookie_domain }}"
