XFG-79 account: update the administrator password if the env has changed

--- a/account/values.yaml
+++ b/account/values.yaml
@@ -199,3 +199,6 @@ common:
       mountPath: /opt/xenoss-account/conf/logback.xml
       subPath: logback.xml
       readOnly: true
+
+  podAnnotations:
+    reloader.stakater.com/auto: "true"
