--- a/dmp/values.yaml
+++ b/dmp/values.yaml
@@ -97,7 +97,7 @@ common:
     - name: CLICKHOUSE_DATABASE
       value: "{{ .Values.global.clickhouse.database }}"
 
-    {{- if .Values.global.bs.cron }}
+    {{- if .Values.global.profiles.bs.cron }}
     - name: BID_SHADING_CRON
       value: "{{ .Values.global.bs.cron }}"
     {{- end }}
