XP-000 service monitor -> pod monitor (filex)

--- a/filex/values.yaml
+++ b/filex/values.yaml
@@ -59,6 +59,8 @@ global:
   metrics:
     enabled: true
     serviceMonitor:
+      enabled: false
+    podMonitor:
       enabled: true
       port: httpprivate
   image:
