XP-000 dmp: bump common to 2.0.4

--- a/dmp/values.yaml
+++ b/dmp/values.yaml
@@ -54,6 +54,8 @@ global:
   metrics:
     enabled: true
     serviceMonitor:
+      enabled: false
+    podMonitor:
       enabled: true
       port: httpprivate
 
