--- a/campaigncontrol/values.yaml
+++ b/campaigncontrol/values.yaml
@@ -58,6 +58,8 @@ global:
   metrics:
     enabled: true
     serviceMonitor:
+      enabled: false
+    podMonitor:
       enabled: true
       port: httpprivate
 
