--- a/missioncontrol/values.yaml
+++ b/missioncontrol/values.yaml
@@ -57,6 +57,8 @@ global:
   metrics:
     enabled: true
     serviceMonitor:
+      enabled: false
+    podMonitor:
       enabled: true
       port: httpprivate
 
