--- a/aggregator/values.yaml
+++ b/aggregator/values.yaml
@@ -86,6 +86,8 @@ global:
   metrics:
     enabled: true
     serviceMonitor:
+      enabled: false
+    podMonitor:
       enabled: true
       port: httpprivate
 
