--- a/audience/values.yaml
+++ b/audience/values.yaml
@@ -77,6 +77,8 @@ global:
   metrics:
     enabled: true
     serviceMonitor:
+      enabled: false
+    podMonitor:
       enabled: true
       port: httpprivate
 
