XP-000 account: bump common to 2.0.4

--- a/account/values.yaml
+++ b/account/values.yaml
@@ -85,6 +85,8 @@ global:
   metrics:
     enabled: true
     serviceMonitor:
+      enabled: false
+    podMonitor:
       enabled: true
       port: httpprivate
   image:
