--- a/campaigncontrol/values.yaml
+++ b/campaigncontrol/values.yaml
@@ -11,8 +11,9 @@ global:
     configmap:
       name: ""
   jvm:
+    heap: 800M
     options: |
-      -Xmx800M
+      -Xmx{{ .Values.global.jvm.heap }}
       -Xss228k
       -XX:+UseG1GC
       -XX:+UseGCOverheadLimit
@@ -151,7 +152,7 @@ common:
     default:
       enabled: true
       files:
-        vm.options: "{{ .Values.global.jvm.options }}"
+        vm.options: "{{ include \"common.tpl\" ( dict \"Template\" .Values.global.jvm.options \"Root\" $ ) }}"
         logback.xml: "{{ .Values.global.logs.configuration }}"
   volumes:
     - name: "{{ include \"common.fullname\" $ }}"
