--- a/uploader/values.yaml
+++ b/uploader/values.yaml
@@ -9,7 +9,7 @@ global:
     configmap:
       name: ""
     location: /opt/xenoss-uploader/conf/database-configuration.yaml
-    forceTtlDuration: -1
+    forceTtlDuration: "-1"
 
   instance:
     name: default
@@ -181,7 +181,7 @@ common:
     - name: CLICKHOUSE_DATABASE
       value: {{ .Values.global.instance.clickhouse.database }}
     - name: CLICKHOUSE_MIGRATION_FORCE_TTL_DURATION
-      value: {{ .Values.global.databaseconfiguration.forceTtlDuration }}
+      value: {{ .Values.global.databaseconfiguration.forceTtlDuration | quote }}
 
     - name: UPLOADER_FILESYSTEM_CONFIGURATION
       value: {{ include "filesystem.configuration" . | quote }}
