--- a/missioncontrol/values.yaml
+++ b/missioncontrol/values.yaml
@@ -154,13 +154,13 @@ common:
     - name: COOKIE_DOMAIN
       value: "{{ .Values.global.cookie_domain }}"
     - name: APP_LOGGING_LEVEL
-      value: {{ .Values.global.logs.loglevel | quote }}
+      value: "{{ .Values.global.logs.loglevel }}"
     - name: MONGO_CONNECTION_URL
       value: "{{ .Values.global.mongo }}"
     - name: HTTP_CC_REMOTE
       value: "http://{{ .Values.global.hosts.campaigncontrol }}:8081/remote/"
     - name: PREDICT_SERVICE_STORAGE_URL
-      value: {{ .Values.global.storage.predict.url | quote }}
+      value: "{{ .Values.global.storage.predict.url }}"
     - name: FILESYSTEM_CONFIGURATION
       value: {{ include "filesystem.configuration" . | quote }}
 
