DSP-000 mc: logs

--- a/missioncontrol/values.yaml
+++ b/missioncontrol/values.yaml
@@ -57,6 +57,8 @@ global:
         <logger name="oap.application.remote" level="WARN"/>
         <logger name="javax.management" level="ERROR" />
         <logger name="net.rubyeye.xmemcached" level="WARN" />
+        <logger name="org.jclouds" level="WARN"/>
+        <logger name="jclouds" level="WARN"/>
       
         <root level="${APP_LOGGING_LEVEL:-DEBUG}">
             <appender-ref ref="STDOUT"/>
