--- a/campaigncontrol/values.yaml
+++ b/campaigncontrol/values.yaml
@@ -125,9 +125,7 @@ global:
 
   resources:
     limits: {}
-    requests:
-      memory: 256Mi
-      cpu: 300m
+    requests: {}
   podSecurityContext:
     enabled: true
     fsGroup: 1001
