--- a/.github/workflows/common-release.yml
+++ b/.github/workflows/common-release.yml
@@ -4,7 +4,8 @@ on:
   push:
     branches:
       - master
-
+    paths:
+      - 'charts/common/**'
 jobs:
   release:
     permissions:
@@ -23,5 +24,7 @@ jobs:
 
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.6.0
+        with:
+          skip_existing: true
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
