--- a/charts/cdn/Chart.yaml
+++ b/charts/cdn/Chart.yaml
@@ -1,13 +1,13 @@
 annotations:
   category: Infrastructure
 apiVersion: v2
-appVersion: 0.0.3
+appVersion: 0.0.4
 dependencies:
   - name: common
-    repository: https://nexus.xenoss.io/repository/xenoss-helm-oss
-    version: 2.0.6
+    repository: https://xenoss.github.io/xenoss-helm-common
+    version: 2.0.7
 home: https://xenoss.com
 name: cdn
 sources:
-  - https://github.com/xenoss/xenoss.logger
-version: 0.0.3
+  - https://xenoss.github.io/xenoss-helm-common
+version: 0.0.4
