--- a/charts/aggregator/Chart.yaml
+++ b/charts/aggregator/Chart.yaml
@@ -1,13 +1,13 @@
 annotations:
   category: Infrastructure
 apiVersion: v2
-appVersion: 1.0.5
+appVersion: 1.0.6
 dependencies:
   - name: common
-    repository: https://nexus.xenoss.io/repository/xenoss-helm-oss
-    version: 2.0.6
+    repository: https://xenoss.github.io/xenoss-helm-common
+    version: 2.0.7
 home: https://xenoss.com
 name: aggregator
 sources:
-  - https://github.com/xenoss/xenoss.reporting
-version: 1.0.5
+  - https://xenoss.github.io/xenoss-helm-common
+version: 1.0.6
