bidder: filesystem configuration

--- a/charts/bidder/values.yaml
+++ b/charts/bidder/values.yaml
@@ -23,6 +23,25 @@ global:
   exchanges:
     configmap:
       name: ""
+
+  storage:
+    configurationFrom:
+      secret:
+        name: "aws-auth"
+        properties:
+          - source: access-key
+            env: AWS_ACCESS_KEY_ID
+            target: fs.s3.clouds.identity
+          - source: secret-access-key
+            env: AWS_SECRET_ACCESS_KEY
+            target: fs.s3.clouds.credential
+    configuration:
+      fs.s3.clouds.endpoint: https://s3.us-east-1.amazonaws.com
+      fs.s3.clouds.s3.virtual-host-buckets: false
+
+      fs.default.clouds.scheme: s3
+      fs.default.clouds.container: test-logs
+
   datamodel:
     configmap:
       name: ""
@@ -186,7 +205,7 @@ common:
   containerPorts:
     - name: httpprivate
       containerPort: 8081
-  envVars:
+  envVars: |
     - name: OAP_BOOT_MODULE_FREQUENCY_CAPPING
       value: "{{ .Values.global.modules.frequency_capping.enabled }}"
     - name: OAP_BOOT_MODULE_FREQUENCY_CAPPING_USER_PROFILE_ID_PATH
@@ -227,6 +246,10 @@ common:
       value: "{{ .Values.global.hosts.bidder.event }}"
     - name: REGION
       value: "{{ .Values.global.region }}"
+    - name: FILESYSTEM_CONFIGURATION
+      value: {{ include "filesystem.configuration" . | quote }}
+    {{- include "filesystem.env" . }}
+
   configMaps:
     default:
       enabled: true
