bidder: fix aws auth

--- a/charts/bidder/values.yaml
+++ b/charts/bidder/values.yaml
@@ -30,10 +30,10 @@ global:
       secret:
         name: "aws-auth"
         properties:
-          - source: access-key
+          - source: AWS_ACCESS_KEY_ID
             env: AWS_ACCESS_KEY_ID
             target: fs.s3.clouds.identity
-          - source: secret-access-key
+          - source: AWS_SECRET_ACCESS_KEY
             env: AWS_SECRET_ACCESS_KEY
             target: fs.s3.clouds.credential
     configuration:
