logger: global.cloudStorageSecretName

--- a/charts/logger/values.yaml
+++ b/charts/logger/values.yaml
@@ -4,6 +4,7 @@ global:
     refresh:
       init_delay: 10s
       period: 10s
+  cloudStorageSecretName: aws-auth
   finisher:
     threads: 2
     cron: "0 * * * * ? *"
@@ -22,7 +23,7 @@ global:
   storage:
     configurationFrom:
       secret:
-        name: "aws-auth"
+        name: {{ .Values.global.cloudStorageSecretName }}
         properties:
           - source: AWS_ACCESS_KEY_ID
             env: AWS_ACCESS_KEY_ID
